@@ -1970,6 +1970,7 @@ SCIP_RETCODE varCreate(
    (*var)->initial = initial;
    (*var)->removable = removable;
    (*var)->deleted = FALSE;
+   (*var)->donotaggr = FALSE;
    (*var)->donotmultaggr = FALSE;
    (*var)->vartype = vartype; /*lint !e641*/
    (*var)->pseudocostflag = FALSE;
@@ -2138,7 +2139,8 @@ SCIP_RETCODE SCIPvarCopy(
          NULL, NULL, NULL, NULL, NULL) );
    assert(*var != NULL);
 
-   /* directly copy donotmultaggr flag */
+   /* directly copy donot(mult)aggr flag */
+   (*var)->donotaggr = sourcevar->donotaggr;
    (*var)->donotmultaggr = sourcevar->donotmultaggr;
 
    /* insert variable into mapping between source SCIP and the target SCIP */
@@ -3130,6 +3132,8 @@ SCIP_RETCODE SCIPvarAddLocks(
 
          return SCIP_OKAY;
       case SCIP_VARSTATUS_AGGREGATED:
+         assert(!lockvar->donotaggr);
+
          if( lockvar->data.aggregate.scalar < 0.0 )
          {
             int tmp = addnlocksup;
@@ -3215,6 +3219,7 @@ int SCIPvarGetNLocksDownType(
       return var->nlocksdown[locktype];
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       if( var->data.aggregate.scalar > 0.0 )
          return SCIPvarGetNLocksDownType(var->data.aggregate.var, locktype);
       else
@@ -3272,6 +3277,7 @@ int SCIPvarGetNLocksUpType(
       return var->nlocksup[locktype];
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       if( var->data.aggregate.scalar > 0.0 )
          return SCIPvarGetNLocksUpType(var->data.aggregate.var, locktype);
       else
@@ -3412,7 +3418,8 @@ SCIP_RETCODE SCIPvarTransform(
          assert((*transvar)->nlocksup[i] >= 0);
       }
 
-      /* copy doNotMultiaggr status */
+      /* copy donot(mult)aggr status */
+      (*transvar)->donotaggr = origvar->donotaggr;
       (*transvar)->donotmultaggr = origvar->donotmultaggr;
 
       /* copy lazy bounds */
@@ -4694,6 +4701,13 @@ SCIP_RETCODE SCIPvarAggregate(
    if( SCIPvarGetHolelistGlobal(var) != NULL )
       return SCIP_OKAY;
 
+   /* if the variable is not allowed to be aggregated */
+   if( SCIPvarDoNotAggr(var) )
+   {
+      SCIPsetDebugMsg(set, "variable is not allowed to be aggregated.\n");
+      return SCIP_OKAY;
+   }
+
    assert(aggvar->glbdom.lb == aggvar->locdom.lb); /*lint !e777*/
    assert(aggvar->glbdom.ub == aggvar->locdom.ub); /*lint !e777*/
    assert(SCIPvarGetStatus(aggvar) == SCIP_VARSTATUS_LOOSE);
@@ -4754,7 +4768,8 @@ SCIP_RETCODE SCIPvarAggregate(
       var->negatedvar = aggvar;
       aggvar->negatedvar = var;
 
-      /* copy doNotMultiaggr status */
+      /* copy donot(mult)aggr status */
+      aggvar->donotaggr |= var->donotaggr;
       aggvar->donotmultaggr |= var->donotmultaggr;
 
       /* mark both variables to be non-deletable */
@@ -4769,7 +4784,8 @@ SCIP_RETCODE SCIPvarAggregate(
       var->data.aggregate.scalar = scalar;
       var->data.aggregate.constant = constant;
 
-      /* copy doNotMultiaggr status */
+      /* copy donot(mult)aggr status */
+      aggvar->donotaggr |= var->donotaggr;
       aggvar->donotmultaggr |= var->donotmultaggr;
 
       /* mark both variables to be non-deletable */
@@ -4993,6 +5009,13 @@ SCIP_RETCODE tryAggregateIntVars(
 
    *infeasible = FALSE;
    *aggregated = FALSE;
+
+   /* if the variable is not allowed to be aggregated */
+   if( SCIPvarDoNotAggr(varx) )
+   {
+      SCIPsetDebugMsg(set, "variable is not allowed to be aggregated.\n");
+      return SCIP_OKAY;
+   }
 
    /* get rational representation of coefficients */
    success = SCIPrealToRational(scalarx, -SCIPsetEpsilon(set), SCIPsetEpsilon(set), MAXDNOM, &scalarxn, &scalarxd);
@@ -5459,8 +5482,7 @@ SCIP_RETCODE SCIPvarMultiaggregate(
          }
          else if( ntmpvars == 2 ) /* 0 = a_1*y_1 + a_2*y_2 + c => y_1 = -a_2/a_1 * y_2 - c/a_1 */
          {
-	    /* both variables are different active problem variables, and both scalars are non-zero: try to aggregate them */
-
+            /* both variables are different active problem variables, and both scalars are non-zero: try to aggregate them */
             SCIPsetDebugMsg(set, "Possible multi-aggregation led to aggregation of variables <%s> and <%s> with scalars %g and %g and constant %g.\n",
                   SCIPvarGetName(tmpvars[0]), SCIPvarGetName(tmpvars[1]), tmpscalars[0], tmpscalars[1], -tmpconstant);
 
@@ -5724,6 +5746,39 @@ SCIP_VAR* varGetActiveVar(
    }
 }
 
+/** returns whether variable is not allowed to be aggregated */
+SCIP_Bool SCIPvarDoNotAggr(
+   SCIP_VAR*             var                 /**< problem variable */
+   )
+{
+   SCIP_VAR* retvar;
+
+   assert(var != NULL);
+
+   retvar = varGetActiveVar(var);
+   assert(retvar != NULL);
+
+   switch( SCIPvarGetStatus(retvar) )
+   {
+   case SCIP_VARSTATUS_ORIGINAL:
+   case SCIP_VARSTATUS_LOOSE:
+   case SCIP_VARSTATUS_COLUMN:
+   case SCIP_VARSTATUS_FIXED:
+      return retvar->donotaggr;
+
+   case SCIP_VARSTATUS_MULTAGGR:
+      return FALSE;
+
+   case SCIP_VARSTATUS_AGGREGATED:
+   case SCIP_VARSTATUS_NEGATED:
+   default:
+      /* aggregated and negated variables should be resolved by varGetActiveVar() */
+      SCIPerrorMessage("wrong variable status\n");
+      SCIPABORT();
+      return FALSE; /*lint !e527 */
+   }
+}
+
 /** returns whether variable is not allowed to be multi-aggregated */
 SCIP_Bool SCIPvarDoNotMultaggr(
    SCIP_VAR*             var                 /**< problem variable */
@@ -5750,6 +5805,7 @@ SCIP_Bool SCIPvarDoNotMultaggr(
    case SCIP_VARSTATUS_AGGREGATED:
    case SCIP_VARSTATUS_NEGATED:
    default:
+      /* aggregated and negated variables should be resolved by varGetActiveVar() */
       SCIPerrorMessage("wrong variable status\n");
       SCIPABORT();
       return FALSE; /*lint !e527 */
@@ -5825,7 +5881,8 @@ SCIP_RETCODE SCIPvarNegate(
       (*negvar)->branchpriority = var->branchpriority;
       (*negvar)->branchdirection = SCIPbranchdirOpposite((SCIP_BRANCHDIR)var->branchdirection); /*lint !e641*/
 
-      /* copy doNotMultiaggr status */
+      /* copy donot(mult)aggr status */
+      (*negvar)->donotaggr = var->donotaggr;
       (*negvar)->donotmultaggr = var->donotmultaggr;
 
       /* copy lazy bounds (they have to be flipped) */
@@ -5947,6 +6004,42 @@ void SCIPvarMarkDeleted(
    var->deleted = TRUE;
 }
 
+/** marks the variable to not to be aggregated */
+SCIP_RETCODE SCIPvarMarkDoNotAggr(
+   SCIP_VAR*             var                 /**< problem variable */
+   )
+{
+   SCIP_VAR* retvar;
+
+   assert(var != NULL);
+
+   retvar = varGetActiveVar(var);
+   assert(retvar != NULL);
+
+   switch( SCIPvarGetStatus(retvar) )
+   {
+   case SCIP_VARSTATUS_ORIGINAL:
+   case SCIP_VARSTATUS_LOOSE:
+   case SCIP_VARSTATUS_COLUMN:
+   case SCIP_VARSTATUS_FIXED:
+      retvar->donotaggr = TRUE;
+      break;
+
+   case SCIP_VARSTATUS_MULTAGGR:
+      SCIPerrorMessage("cannot mark a multi-aggregated variable to not be multi-aggregated.\n");
+      return SCIP_INVALIDDATA;
+
+   case SCIP_VARSTATUS_AGGREGATED:
+   case SCIP_VARSTATUS_NEGATED:
+   default:
+      /* aggregated and negated variables should be resolved by varGetActiveVar() */
+      SCIPerrorMessage("wrong variable status\n");
+      return SCIP_INVALIDDATA;
+   }
+
+   return SCIP_OKAY;
+}
+
 /** marks the variable to not to be multi-aggregated */
 SCIP_RETCODE SCIPvarMarkDoNotMultaggr(
    SCIP_VAR*             var                 /**< problem variable */
@@ -5975,6 +6068,7 @@ SCIP_RETCODE SCIPvarMarkDoNotMultaggr(
    case SCIP_VARSTATUS_AGGREGATED:
    case SCIP_VARSTATUS_NEGATED:
    default:
+      /* aggregated and negated variables should be resolved by varGetActiveVar() */
       SCIPerrorMessage("wrong variable status\n");
       return SCIP_INVALIDDATA;
    }
@@ -6219,6 +6313,7 @@ SCIP_RETCODE SCIPvarAddObj(
          break;
 
       case SCIP_VARSTATUS_AGGREGATED:
+         assert(!var->donotaggr);
          /* x = a*y + c  ->  add a*addobj to obj. val. of y, and c*addobj to obj. offset of problem */
          SCIPprobAddObjoffset(transprob, var->data.aggregate.constant * addobj);
          SCIP_CALL( SCIPprimalUpdateObjoffset(primal, blkmem, set, stat, eventfilter, eventqueue, transprob, origprob, tree, reopt, lp) );
@@ -11370,6 +11465,7 @@ SCIP_RETCODE SCIPvarChgBranchFactor(
       break;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       SCIP_CALL( SCIPvarChgBranchFactor(var->data.aggregate.var, set, branchfactor) );
       break;
@@ -11489,12 +11585,13 @@ SCIP_RETCODE SCIPvarChgBranchPriority(
       break;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       SCIP_CALL( SCIPvarChgBranchPriority(var->data.aggregate.var, branchpriority) );
       break;
 
    case SCIP_VARSTATUS_MULTAGGR:
-      assert(!var->donotmultaggr);      
+      assert(!var->donotmultaggr);
       for( v = 0; v < var->data.multaggr.nvars; ++v )
       {
          SCIP_CALL( SCIPvarChgBranchPriority(var->data.multaggr.vars[v], branchpriority) );
@@ -11619,6 +11716,7 @@ SCIP_RETCODE SCIPvarChgBranchDirection(
       break;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       if( var->data.aggregate.scalar > 0.0 )
       {
@@ -12864,6 +12962,7 @@ SCIP_Real SCIPvarGetLPSol_rec(
    {
       SCIP_Real lpsolval;
 
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       lpsolval = SCIPvarGetLPSol(var->data.aggregate.var);
 
@@ -12983,6 +13082,7 @@ SCIP_Real SCIPvarGetPseudoSol_rec(
    case SCIP_VARSTATUS_AGGREGATED:
    {
       SCIP_Real pseudosolval;
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       /* a correct implementation would need to check the value of var->data.aggregate.var for infinity and return the
        * corresponding infinity value instead of performing an arithmetical transformation (compare method
@@ -13140,6 +13240,7 @@ SCIP_Real SCIPvarGetRootSol(
       return var->locdom.lb;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       /* a correct implementation would need to check the value of var->data.aggregate.var for infinity and return the
        * corresponding infinity value instead of performing an arithmetical transformation (compare method
@@ -13504,6 +13605,7 @@ SCIP_Real SCIPvarGetBestRootSol(
       return var->locdom.lb;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       /* a correct implementation would need to check the value of var->data.aggregate.var for infinity and return the
        * corresponding infinity value instead of performing an arithmetical transformation (compare method
@@ -13853,6 +13955,7 @@ SCIP_Real SCIPvarGetAvgSol(
       return var->locdom.lb;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       return var->data.aggregate.scalar * SCIPvarGetAvgSol(var->data.aggregate.var)
          + var->data.aggregate.constant;
@@ -14095,6 +14198,7 @@ SCIP_RETCODE SCIPvarAddToRow(
       return SCIP_OKAY;
 
    case SCIP_VARSTATUS_AGGREGATED:
+      assert(!var->donotaggr);
       assert(var->data.aggregate.var != NULL);
       SCIP_CALL( SCIPvarAddToRow(var->data.aggregate.var, blkmem, set, stat, eventqueue, prob, lp,
             row, var->data.aggregate.scalar * val) );
@@ -17410,6 +17514,7 @@ SCIP_VAR* SCIPvarGetAggrVar(
 {
    assert(var != NULL);
    assert(SCIPvarGetStatus(var) == SCIP_VARSTATUS_AGGREGATED);
+   assert(!var->donotaggr);
 
    return var->data.aggregate.var;
 }
@@ -17421,6 +17526,7 @@ SCIP_Real SCIPvarGetAggrScalar(
 {
    assert(var != NULL);
    assert(SCIPvarGetStatus(var) == SCIP_VARSTATUS_AGGREGATED);
+   assert(!var->donotaggr);
 
    return var->data.aggregate.scalar;
 }
@@ -17432,6 +17538,7 @@ SCIP_Real SCIPvarGetAggrConstant(
 {
    assert(var != NULL);
    assert(SCIPvarGetStatus(var) == SCIP_VARSTATUS_AGGREGATED);
+   assert(!var->donotaggr);
 
    return var->data.aggregate.constant;
 }
